# TANCKIKI-2D

./: .gitignore  CMakeLists.txt  main.cpp
sources/: Ammunition.cpp  Ammunition.hpp  Bullet.cpp  Bullet.hpp  Collision.cpp  EventManager.cpp  EventManager.hpp  GameManager.cpp  GameManager.hpp  GameObject.cpp  GameObject.hpp  GraphicsManager.cpp  GraphicsManager.hpp  InterfaceManager.cpp  InterfaceManager.hpp  Match.cpp  Match.hpp  NetworkManager.cpp  NetworkManager.hpp  ObjectManager.cpp  ObjectManager.hpp  PhysicsManager.cpp  PhysicsManager.hpp  Repair.cpp  Repair.hpp  Tank.cpp  Tank.hpp  WidgetsMenu.cpp  WidgetsMenu.hpp  blocks.hpp  windowConfig.hpp
sources/constants/: gameStates.hpp  messages.hpp  widgets_names.hpp
sources/json/: armament.json  map1.txt  map2.txt  map3.txt  players_info.txt
sources/utils/: dateTime.cpp
